1.2.4 (2011-12-06)
==================

Features
--------

- ``bpython`` interpreter compatibility in ``pshell``. See the "Command-Line
  Pyramid" narrative docs chapter for more information.

Bug Fixes
---------

- Prevent a scaffold rendering from being named ``site`` (conflicts with
  Python internal site.py).

- Forward compatibility for ``pyramid_zcml`` >= 0.8 + ``zope.configuration``
  >= 3.8.0.

Backward Incompatibilities
--------------------------

- The ``pshell`` command (see "paster pshell") no longer accepts a
  ``--disable-ipython`` command-line argument.  Instead, it accepts a ``-p``
  or ``--python-shell`` argument, which can be any of the values ``python``,
  ``ipython`` or ``bpython``.

1.2.3 (2011-11-20)
==================

- 1.2.2 was a brownbag, containing a stray ``intr.py``.

1.2.2 (2011-11-20)
==================

Features
--------

- Backport from master: a ``mako.directories`` setting is no longer required
  to use Mako templates.  Rationale: Mako template renderers can be specified
  using an absolute asset spec.  An entire application can be written with
  such asset specs, requiring no ordered lookup path.

Bug Fixes
---------

- Backport from master: The ``pryamid.view.view_config`` decorator did not
  accept a ``match_params`` predicate argument.  See
  https://github.com/Pylons/pyramid/pull/308

- Backport fixes from master regarding URL decoding.  URL segments are
  no-longer "double-decoded" during traversal and when encountered in a route
  subpath (or other star-arg pattern).  As a result, a new API named
  ``pyramid.traversal.traversal_path_info`` was added to the system.  This
  function accepts an already-URL-decoded string and returns a tuple of
  Unicode objects.  This API is used internally by Pyramid in all places that
  ``pyramid.traversal.traversal_path`` used to be used.  The
  ``traversal_path`` function remains for backwards compatibility, however,
  and can still be used when a path is encoded.  See