@@ -1,3 +1,11 @@
+Next release
+============
+
+- Backport the ``egg:pyramid#wsgiref`` and ``egg:pyramid#cherrypy`` server
+  runners from the 1.3 branch.  This change is to primarily allow scaffolding
+  authors to rely on the wsgiref entry point for projects that are meant to
+  work on both Pyramid 1.2.5 and 1.3.X.
+
 1.2.4 (2011-12-06)
 ==================
 
